# Algorithm-Art

./: CMakeLists.txt  README.md  main.cpp  qtcount.cpp  qtcount.h  qtvar.cpp  quadtree.cpp  quadtree.h  stats.cpp  stats.h  testComp.cpp
